...
    <string name="reset_password_email_hint">Enter email</string>
    <string name="reset_password_new_password">New password</string>
    <string name="reset_password_confirm_password">Confirm new password</string>
    <string name="reset_password_btn">Reset password</string>
    <string name="reset_password_dialog_btn_success">Go to login</string>
    <string name="reset_password_dialog_btn_failure">Retry</string>
    <string name="reset_password_invalid_email">Enter a valid email!</string>
    <string name="reset_password_different_passwords">Passwords do not match!</string>
    <string name="reset_password_password_too_short">The password must be at least 8 characters!</string>
    <string name="reset_password_success">The request to reset the password was successful. An email was sent to
        the provided email address with a link to finish the password reset. After clicking that link you can log in
        the app with the new credentials.
    </string>
    <string name="reset_password_failure">The request to reset the password failed! Please try again.</string>
    <string name="reset_password_loading">Processing the reset password request…</string>

    <!-- Register screen -->
    <string name="register_title" translatable="false">Create your account</string>
    <string name="register_label_first_name" translatable="false">First name</string>
    <string name="register_label_last_name" translatable="false">Last name</string>
    <string name="register_label_email" translatable="false">Email</string>
...
